:construction: Remote ivl3_5_bank commit 2

--- a/ivl3_5_8b_bank_statement_independent_turns.ipynb
+++ b/ivl3_5_8b_bank_statement_independent_turns.ipynb
@@ -169,7 +169,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "76dd21688bac44e194c436d5b7560f4e",
+       "model_id": "34d522b75aea4ef6a249bd9c95422606",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1215,11 +1215,292 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "cell-19",
    "metadata": {},
-   "outputs": [],
-   "source": "# Cell 19: Turn 1 - Extract full table (InternVL3.5-8B version, INDEPENDENT fresh context)\n\nprint(\"🤖 Generating response with InternVL3.5-8B (bfloat16)...\")\n\n# CRITICAL: Reload image for fresh context (independent turn, not continuing conversation)\n# Uses CONFIG['MAX_TILES'] automatically\npixel_values = load_image(imageName, input_size=448)\n\n# Move to correct device and dtype\n# CRITICAL: Use bfloat16 for non-quantized H200 models\npixel_values = pixel_values.to(dtype=torch.bfloat16, device='cuda:0')\n\n# Generate response using chat() method with dynamic prompt\ncleanedOutput2 = model.chat(\n    tokenizer=tokenizer,\n    pixel_values=pixel_values,\n    question=follow_up_prompt,  # Dynamic prompt with column-aware examples from Cell 18\n    generation_config={\n        \"max_new_tokens\": CONFIG['MAX_NEW_TOKENS'],\n        \"do_sample\": False\n    }\n)\n\n# Clean InternVL3 artifacts:\n# 1. Remove image markdown placeholder (![...])\n# 2. Remove markdown code fences (```markdown and ```)\nlines = cleanedOutput2.split(\"\\n\")\ncleaned_lines = []\nfor line in lines:\n    stripped = line.strip()\n    # Skip image markdown, code fences, and empty fence markers\n    if stripped.startswith(\"![\"):\n        continue\n    if stripped in [\"```markdown\", \"```\", \"```md\"]:\n        continue\n    cleaned_lines.append(line)\n\ncleanedOutput2 = \"\\n\".join(cleaned_lines)\n\nprint(\"\\n✅ Turn 1 extraction complete!\")\n\n# Display the extracted table as rendered HTML for reliable visual verification\n# NOTE: display(Markdown(...)) has rendering issues with empty cells - use HTML instead\nprint(\"\\n\" + \"=\" * 60)\nprint(\"TURN 1 - EXTRACTED MARKDOWN TABLE (Rendered as HTML):\")\nprint(\"=\" * 60)\n\ndef markdown_table_to_html(markdown_text):\n    \"\"\"Convert markdown table to HTML for reliable Jupyter rendering.\"\"\"\n    lines = [line.strip() for line in markdown_text.strip().split('\\n') if line.strip()]\n    \n    html_parts = ['<table border=\"1\" style=\"border-collapse: collapse;\">']\n    is_header = True\n    \n    for line in lines:\n        if '|' not in line:\n            continue\n        \n        # Skip separator rows\n        cleaned = line.replace('|', '').replace('-', '').replace(' ', '').replace(':', '')\n        if not cleaned:\n            continue\n        \n        # Parse cells\n        cells = [c.strip() for c in line.split('|')]\n        # Remove empty leading/trailing from pipe delimiters\n        if cells and cells[0] == '':\n            cells = cells[1:]\n        if cells and cells[-1] == '':\n            cells = cells[:-1]\n        \n        if is_header:\n            html_parts.append('<tr style=\"background-color: #f0f0f0;\">')\n            for cell in cells:\n                html_parts.append(f'<th style=\"padding: 8px; text-align: left;\">{cell}</th>')\n            html_parts.append('</tr>')\n            is_header = False\n        else:\n            html_parts.append('<tr>')\n            for cell in cells:\n                html_parts.append(f'<td style=\"padding: 8px;\">{cell if cell else \"&nbsp;\"}</td>')\n            html_parts.append('</tr>')\n    \n    html_parts.append('</table>')\n    return '\\n'.join(html_parts)\n\n# Render as HTML table (more reliable than Markdown for tables with empty cells)\nfrom IPython.display import HTML\nhtml_table = markdown_table_to_html(cleanedOutput2)\ndisplay(HTML(html_table))\n\n# Comment out the problematic Markdown display - it corrupts tables with empty cells\n# display(Markdown(cleanedOutput2))\n\nprint(\"\\n\" + \"=\" * 60)\nprint(\"TURN 1 - RAW MARKDOWN TEXT:\")\nprint(\"=\" * 60)\nprint(cleanedOutput2)\nprint(\"=\" * 60)\n\n# Save the markdown table\noutput_path = Path(\"ivl3_5_8b_markdown_table_extraction.txt\")\nwith output_path.open(\"w\", encoding=\"utf-8\") as text_file:\n    text_file.write(cleanedOutput2)\n\nprint(f\"\\n✅ Markdown table saved to: {output_path}\")"
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🤖 Generating response with InternVL3.5-8B (bfloat16)...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting `pad_token_id` to `eos_token_id`:151645 for open-end generation.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "✅ Turn 1 extraction complete!\n",
+      "\n",
+      "============================================================\n",
+      "TURN 1 - EXTRACTED MARKDOWN TABLE (Rendered as HTML):\n",
+      "============================================================\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" style=\"border-collapse: collapse;\">\n",
+       "<tr style=\"background-color: #f0f0f0;\">\n",
+       "<th style=\"padding: 8px; text-align: left;\">Date</th>\n",
+       "<th style=\"padding: 8px; text-align: left;\">Transaction</th>\n",
+       "<th style=\"padding: 8px; text-align: left;\">Debit</th>\n",
+       "<th style=\"padding: 8px; text-align: left;\">Credit</th>\n",
+       "<th style=\"padding: 8px; text-align: left;\">Balance</th>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td style=\"padding: 8px;\">15 Mar 2024</td>\n",
+       "<td style=\"padding: 8px;\">OPENING BALANCE</td>\n",
+       "<td style=\"padding: 8px;\">&nbsp;</td>\n",
+       "<td style=\"padding: 8px;\">&nbsp;</td>\n",
+       "<td style=\"padding: 8px;\">$3,156.28 CR</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td style=\"padding: 8px;\">18 Mar 2024</td>\n",
+       "<td style=\"padding: 8px;\">TELSTRA MOBILE SERVICES SYDNEY AUS</td>\n",
+       "<td style=\"padding: 8px;\">48.50</td>\n",
+       "<td style=\"padding: 8px;\">&nbsp;</td>\n",
+       "<td style=\"padding: 8px;\">$3,107.78 CR</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td style=\"padding: 8px;\">19 Mar 2024</td>\n",
+       "<td style=\"padding: 8px;\">WOOLWORTHS 2847 MELBOURNE VIC AUS</td>\n",
+       "<td style=\"padding: 8px;\">127.35</td>\n",
+       "<td style=\"padding: 8px;\">&nbsp;</td>\n",
+       "<td style=\"padding: 8px;\">$2,980.43 CR</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td style=\"padding: 8px;\">20 Mar 2024</td>\n",
+       "<td style=\"padding: 8px;\">SHELL SERVICE STATION RICHMOND VIC</td>\n",
+       "<td style=\"padding: 8px;\">89.60</td>\n",
+       "<td style=\"padding: 8px;\">&nbsp;</td>\n",
+       "<td style=\"padding: 8px;\">$2,890.83 CR</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td style=\"padding: 8px;\">22 Mar 2024</td>\n",
+       "<td style=\"padding: 8px;\">NETFLIX SUBSCRIPTION</td>\n",
+       "<td style=\"padding: 8px;\">22.99</td>\n",
+       "<td style=\"padding: 8px;\">&nbsp;</td>\n",
+       "<td style=\"padding: 8px;\">$2,867.84 CR</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td style=\"padding: 8px;\">25 Mar 2024</td>\n",
+       "<td style=\"padding: 8px;\">Transfer from xx8765 CommBank app</td>\n",
+       "<td style=\"padding: 8px;\">&nbsp;</td>\n",
+       "<td style=\"padding: 8px;\">500.00</td>\n",
+       "<td style=\"padding: 8px;\">$3,367.84 CR</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td style=\"padding: 8px;\">28 Mar 2024</td>\n",
+       "<td style=\"padding: 8px;\">CAFE LATTE FITZROY VIC AUS</td>\n",
+       "<td style=\"padding: 8px;\">18.50</td>\n",
+       "<td style=\"padding: 8px;\">&nbsp;</td>\n",
+       "<td style=\"padding: 8px;\">$3,349.34 CR</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td style=\"padding: 8px;\">01 Apr 2024</td>\n",
+       "<td style=\"padding: 8px;\">SALARY DEPOSIT ACME PTY LTD</td>\n",
+       "<td style=\"padding: 8px;\">&nbsp;</td>\n",
+       "<td style=\"padding: 8px;\">3,500.00</td>\n",
+       "<td style=\"padding: 8px;\">$6,849.34 CR</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td style=\"padding: 8px;\">03 Apr 2024</td>\n",
+       "<td style=\"padding: 8px;\">Transfer to xx2468 CommBank app</td>\n",
+       "<td style=\"padding: 8px;\">2,000.00</td>\n",
+       "<td style=\"padding: 8px;\">&nbsp;</td>\n",
+       "<td style=\"padding: 8px;\">$4,849.34 CR</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td style=\"padding: 8px;\">05 Apr 2024</td>\n",
+       "<td style=\"padding: 8px;\">COLES SUPERMARKET CARLTON VIC</td>\n",
+       "<td style=\"padding: 8px;\">156.78</td>\n",
+       "<td style=\"padding: 8px;\">&nbsp;</td>\n",
+       "<td style=\"padding: 8px;\">$4,692.56 CR</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td style=\"padding: 8px;\">08 Apr 2024</td>\n",
+       "<td style=\"padding: 8px;\">PARKING METERS MELBOURNE VIC</td>\n",
+       "<td style=\"padding: 8px;\">15.00</td>\n",
+       "<td style=\"padding: 8px;\">&nbsp;</td>\n",
+       "<td style=\"padding: 8px;\">$4,677.56 CR</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td style=\"padding: 8px;\">10 Apr 2024</td>\n",
+       "<td style=\"padding: 8px;\">RENT PAYMENT REAL ESTATE</td>\n",
+       "<td style=\"padding: 8px;\">1,850.00</td>\n",
+       "<td style=\"padding: 8px;\">&nbsp;</td>\n",
+       "<td style=\"padding: 8px;\">$2,827.56 CR</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td style=\"padding: 8px;\">12 Apr 2024</td>\n",
+       "<td style=\"padding: 8px;\">Transfer from xx8765 CommBank app</td>\n",
+       "<td style=\"padding: 8px;\">&nbsp;</td>\n",
+       "<td style=\"padding: 8px;\">75.00</td>\n",
+       "<td style=\"padding: 8px;\">$2,902.56 CR</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td style=\"padding: 8px;\">14 Apr 2024</td>\n",
+       "<td style=\"padding: 8px;\">CHEMIST WAREHOUSE MELBOURNE VIC</td>\n",
+       "<td style=\"padding: 8px;\">54.64</td>\n",
+       "<td style=\"padding: 8px;\">&nbsp;</td>\n",
+       "<td style=\"padding: 8px;\">$2,847.92 CR</td>\n",
+       "</tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "============================================================\n",
+      "TURN 1 - RAW MARKDOWN TEXT:\n",
+      "============================================================\n",
+      "| Date | Transaction | Debit | Credit | Balance |\n",
+      "| :--- | :--- | ---: | ---: | ---: |\n",
+      "| 15 Mar 2024 | OPENING BALANCE |  |  | $3,156.28 CR |\n",
+      "| 18 Mar 2024 | TELSTRA MOBILE SERVICES SYDNEY AUS | 48.50 |  | $3,107.78 CR |\n",
+      "| 19 Mar 2024 | WOOLWORTHS 2847 MELBOURNE VIC AUS | 127.35 |  | $2,980.43 CR |\n",
+      "| 20 Mar 2024 | SHELL SERVICE STATION RICHMOND VIC | 89.60 |  | $2,890.83 CR |\n",
+      "| 22 Mar 2024 | NETFLIX SUBSCRIPTION | 22.99 |  | $2,867.84 CR |\n",
+      "| 25 Mar 2024 | Transfer from xx8765 CommBank app |  | 500.00 | $3,367.84 CR |\n",
+      "| 28 Mar 2024 | CAFE LATTE FITZROY VIC AUS | 18.50 |  | $3,349.34 CR |\n",
+      "| 01 Apr 2024 | SALARY DEPOSIT ACME PTY LTD |  | 3,500.00 | $6,849.34 CR |\n",
+      "| 03 Apr 2024 | Transfer to xx2468 CommBank app | 2,000.00 |  | $4,849.34 CR |\n",
+      "| 05 Apr 2024 | COLES SUPERMARKET CARLTON VIC | 156.78 |  | $4,692.56 CR |\n",
+      "| 08 Apr 2024 | PARKING METERS MELBOURNE VIC | 15.00 |  | $4,677.56 CR |\n",
+      "| 10 Apr 2024 | RENT PAYMENT REAL ESTATE | 1,850.00 |  | $2,827.56 CR |\n",
+      "| 12 Apr 2024 | Transfer from xx8765 CommBank app |  | 75.00 | $2,902.56 CR |\n",
+      "| 14 Apr 2024 | CHEMIST WAREHOUSE MELBOURNE VIC | 54.64 |  | $2,847.92 CR |\n",
+      "============================================================\n",
+      "\n",
+      "✅ Markdown table saved to: ivl3_5_8b_markdown_table_extraction.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Cell 19: Turn 1 - Extract full table (InternVL3.5-8B version, INDEPENDENT fresh context)\n",
+    "\n",
+    "print(\"🤖 Generating response with InternVL3.5-8B (bfloat16)...\")\n",
+    "\n",
+    "# CRITICAL: Reload image for fresh context (independent turn, not continuing conversation)\n",
+    "# Uses CONFIG['MAX_TILES'] automatically\n",
+    "pixel_values = load_image(imageName, input_size=448)\n",
+    "\n",
+    "# Move to correct device and dtype\n",
+    "# CRITICAL: Use bfloat16 for non-quantized H200 models\n",
+    "pixel_values = pixel_values.to(dtype=torch.bfloat16, device='cuda:0')\n",
+    "\n",
+    "# Generate response using chat() method with dynamic prompt\n",
+    "cleanedOutput2 = model.chat(\n",
+    "    tokenizer=tokenizer,\n",
+    "    pixel_values=pixel_values,\n",
+    "    question=follow_up_prompt,  # Dynamic prompt with column-aware examples from Cell 18\n",
+    "    generation_config={\n",
+    "        \"max_new_tokens\": CONFIG['MAX_NEW_TOKENS'],\n",
+    "        \"do_sample\": False\n",
+    "    }\n",
+    ")\n",
+    "\n",
+    "# Clean InternVL3 artifacts:\n",
+    "# 1. Remove image markdown placeholder (![...])\n",
+    "# 2. Remove markdown code fences (```markdown and ```)\n",
+    "lines = cleanedOutput2.split(\"\\n\")\n",
+    "cleaned_lines = []\n",
+    "for line in lines:\n",
+    "    stripped = line.strip()\n",
+    "    # Skip image markdown, code fences, and empty fence markers\n",
+    "    if stripped.startswith(\"![\"):\n",
+    "        continue\n",
+    "    if stripped in [\"```markdown\", \"```\", \"```md\"]:\n",
+    "        continue\n",
+    "    cleaned_lines.append(line)\n",
+    "\n",
+    "cleanedOutput2 = \"\\n\".join(cleaned_lines)\n",
+    "\n",
+    "print(\"\\n✅ Turn 1 extraction complete!\")\n",
+    "\n",
+    "# Display the extracted table as rendered HTML for reliable visual verification\n",
+    "# NOTE: display(Markdown(...)) has rendering issues with empty cells - use HTML instead\n",
+    "print(\"\\n\" + \"=\" * 60)\n",
+    "print(\"TURN 1 - EXTRACTED MARKDOWN TABLE (Rendered as HTML):\")\n",
+    "print(\"=\" * 60)\n",
+    "\n",
+    "def markdown_table_to_html(markdown_text):\n",
+    "    \"\"\"Convert markdown table to HTML for reliable Jupyter rendering.\"\"\"\n",
+    "    lines = [line.strip() for line in markdown_text.strip().split('\\n') if line.strip()]\n",
+    "    \n",
+    "    html_parts = ['<table border=\"1\" style=\"border-collapse: collapse;\">']\n",
+    "    is_header = True\n",
+    "    \n",
+    "    for line in lines:\n",
+    "        if '|' not in line:\n",
+    "            continue\n",
+    "        \n",
+    "        # Skip separator rows\n",
+    "        cleaned = line.replace('|', '').replace('-', '').replace(' ', '').replace(':', '')\n",
+    "        if not cleaned:\n",
+    "            continue\n",
+    "        \n",
+    "        # Parse cells\n",
+    "        cells = [c.strip() for c in line.split('|')]\n",
+    "        # Remove empty leading/trailing from pipe delimiters\n",
+    "        if cells and cells[0] == '':\n",
+    "            cells = cells[1:]\n",
+    "        if cells and cells[-1] == '':\n",
+    "            cells = cells[:-1]\n",
+    "        \n",
+    "        if is_header:\n",
+    "            html_parts.append('<tr style=\"background-color: #f0f0f0;\">')\n",
+    "            for cell in cells:\n",
+    "                html_parts.append(f'<th style=\"padding: 8px; text-align: left;\">{cell}</th>')\n",
+    "            html_parts.append('</tr>')\n",
+    "            is_header = False\n",
+    "        else:\n",
+    "            html_parts.append('<tr>')\n",
+    "            for cell in cells:\n",
+    "                html_parts.append(f'<td style=\"padding: 8px;\">{cell if cell else \"&nbsp;\"}</td>')\n",
+    "            html_parts.append('</tr>')\n",
+    "    \n",
+    "    html_parts.append('</table>')\n",
+    "    return '\\n'.join(html_parts)\n",
+    "\n",
+    "# Render as HTML table (more reliable than Markdown for tables with empty cells)\n",
+    "from IPython.display import HTML\n",
+    "html_table = markdown_table_to_html(cleanedOutput2)\n",
+    "display(HTML(html_table))\n",
+    "\n",
+    "# Comment out the problematic Markdown display - it corrupts tables with empty cells\n",
+    "# display(Markdown(cleanedOutput2))\n",
+    "\n",
+    "print(\"\\n\" + \"=\" * 60)\n",
+    "print(\"TURN 1 - RAW MARKDOWN TEXT:\")\n",
+    "print(\"=\" * 60)\n",
+    "print(cleanedOutput2)\n",
+    "print(\"=\" * 60)\n",
+    "\n",
+    "# Save the markdown table\n",
+    "output_path = Path(\"ivl3_5_8b_markdown_table_extraction.txt\")\n",
+    "with output_path.open(\"w\", encoding=\"utf-8\") as text_file:\n",
+    "    text_file.write(cleanedOutput2)\n",
+    "\n",
+    "print(f\"\\n✅ Markdown table saved to: {output_path}\")"
+   ]
   },
   {
    "cell_type": "markdown",
