added model load tester

--- a/model_load_test.ipynb
+++ b/model_load_test.ipynb
@@ -2,6 +2,66 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "ec0ad3e0-1645-4663-8149-9634e233ad1c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PyTorch: 2.5.1\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "89fed72a28684ecd81a7487f7b793a9d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Loading checkpoint shards:   0%|          | 0/4 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model type: <class 'transformers_modules.InternVL3_5_hyphen_8B.modeling_internvl_chat.InternVLChatModel'>\n",
+      "Device: cuda:0\n",
+      "Parameters: 8.5B\n",
+      "Attention implementation: eager\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "print(f\"PyTorch: {torch.__version__}\")\n",
+    "\n",
+    "# Check which backend will be used\n",
+    "from transformers import AutoModel\n",
+    "model = AutoModel.from_pretrained(\n",
+    "    '/home/jovyan/nfs_share/models/InternVL3_5-8B',\n",
+    "    torch_dtype=torch.bfloat16,\n",
+    "    device_map=\"auto\",\n",
+    "    trust_remote_code=True,\n",
+    "    use_flash_attn=False  # ← InternVL3's own parameter\n",
+    "    # attn_implementation=\"eager\"  # ← or set it explicitly\n",
+    "  )\n",
+    "\n",
+    "print(f\"Model type: {type(model)}\")\n",
+    "print(f\"Device: {next(model.parameters()).device}\")\n",
+    "print(f\"Parameters: {sum(p.numel() for p in model.parameters()) / 1e9:.1f}B\")\n",
+    "\n",
+    "print(f\"Attention implementation: {model.config._attn_implementation}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "id": "202cfab9-918b-4bcf-b0f0-4cd01b4a1eac",
    "metadata": {},
@@ -22,7 +82,6 @@
    "source": [
     "import torch\n",
     "print(f\"PyTorch: {torch.__version__}\")\n",
-    "print(f\"SDPA available: {hasattr(torch.nn.functional, 'scaled_dot_product_attention')}\")\n",
     "\n",
     "# Check which backend will be used\n",
     "from transformers import AutoModel\n",
@@ -102,9 +161,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (LMM_POC)",
+   "display_name": "Python (InternVL3.5)",
    "language": "python",
-   "name": "unified_vision_processor"
+   "name": "ivl35_env"
   },
   "language_info": {
    "codemirror_mode": {
