feat: Add GPU load testing notebook with model loading and properties display

--- a/gpu_load_test.ipynb
+++ b/gpu_load_test.ipynb
@@ -2,6 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "1e3dbe1a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "\n",
+    "if torch.cuda.is_available():\n",
+    "    gpu_name = torch.cuda.get_device_name(0)\n",
+    "    print(gpu_name)\n",
+    "      \n",
+    "for i in range(torch.cuda.device_count()):\n",
+    "    print(f\"GPU {i}: {torch.cuda.get_device_name(i)}\")\n",
+    "      \n",
+    "if torch.cuda.is_available():\n",
+    "    props = torch.cuda.get_device_properties(0)\n",
+    "    print(f\"Name: {props.name}\")\n",
+    "    print(f\"Memory: {props.total_memory / 1e9:.1f} GB\")\n",
+    "    print(f\"Compute Capability: {props.major}.{props.minor}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "ec0ad3e0-1645-4663-8149-9634e233ad1c",
    "metadata": {},
