Refactor imports and working directory setup across multiple notebooks and scripts
- Updated import statements to include working directory changes for config file resolution.
- Changed working directory to project root in `ivl3_5_8b`, `ivl3_8b`, and `llama` notebooks and scripts.
- Removed redundant configuration settings from notebooks.
- Ensured consistent handling of imports and paths across all relevant files.

--- a/bank_statement/internvl3_bank_statement_3turn_table.ipynb
+++ b/bank_statement/internvl3_bank_statement_3turn_table.ipynb
@@ -52,7 +52,35 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": "# Cell 1: Imports\n\n# Add parent directory to path for common module imports\nimport sys\nfrom pathlib import Path\nsys.path.insert(0, str(Path.cwd().parent))\nimport random\nimport math\n\nimport numpy as np\nimport torch\nfrom PIL import Image\nfrom transformers import AutoModel, AutoTokenizer\nimport torchvision.transforms as T\nfrom torchvision.transforms.functional import InterpolationMode\n\n# IPython display for rendering markdown\nfrom IPython.display import display, Markdown\n"
+   "source": [
+    "# Cell 1: Imports\n",
+    "\n",
+    "# Add parent directory to path AND change working directory for config file resolution\n",
+    "import sys\n",
+    "import os\n",
+    "from pathlib import Path\n",
+    "\n",
+    "# Get project root (parent of bank_statement/)\n",
+    "project_root = Path.cwd().parent\n",
+    "sys.path.insert(0, str(project_root))\n",
+    "\n",
+    "# Change working directory to project root so config/field_definitions.yaml is found\n",
+    "os.chdir(project_root)\n",
+    "print(f\"\ud83d\udcc1 Working directory: {os.getcwd()}\")\n",
+    "\n",
+    "import random\n",
+    "import math\n",
+    "\n",
+    "import numpy as np\n",
+    "import torch\n",
+    "from PIL import Image\n",
+    "from transformers import AutoModel, AutoTokenizer\n",
+    "import torchvision.transforms as T\n",
+    "from torchvision.transforms.functional import InterpolationMode\n",
+    "\n",
+    "# IPython display for rendering markdown\n",
+    "from IPython.display import display, Markdown"
+   ]
   },
   {
    "cell_type": "markdown",
