--- a/bank_statement/llama_bank_statement_3turn_table.ipynb
+++ b/bank_statement/llama_bank_statement_3turn_table.ipynb
@@ -68,10 +68,18 @@
    "source": [
     "# Cell 1: Imports\n",
     "\n",
-    "# Add parent directory to path for common module imports\n",
+    "# Add parent directory to path AND change working directory for config file resolution\n",
     "import sys\n",
+    "import os\n",
     "from pathlib import Path\n",
-    "sys.path.insert(0, str(Path.cwd().parent))\n",
+    "\n",
+    "# Get project root (parent of bank_statement/)\n",
+    "project_root = Path.cwd().parent\n",
+    "sys.path.insert(0, str(project_root))\n",
+    "\n",
+    "# Change working directory to project root so config/field_definitions.yaml is found\n",
+    "os.chdir(project_root)\n",
+    "print(f\"\ud83d\udcc1 Working directory: {os.getcwd()}\")\n",
     "\n",
     "# Standard library imports\n",
     "import random\n",
