--- a/bank_statement/ivl3_5_8b_bank_statement_3turn_table.ipynb
+++ b/bank_statement/ivl3_5_8b_bank_statement_3turn_table.ipynb
@@ -71,10 +71,19 @@
    "source": [
     "# Cell 1: Imports and Configuration\n",
     "\n",
-    "# Add parent directory to path for common module imports\n",
+    "# Add parent directory to path AND change working directory for config file resolution\n",
     "import sys\n",
+    "import os\n",
     "from pathlib import Path\n",
-    "sys.path.insert(0, str(Path.cwd().parent))\n",
+    "\n",
+    "# Get project root (parent of bank_statement/)\n",
+    "project_root = Path.cwd().parent\n",
+    "sys.path.insert(0, str(project_root))\n",
+    "\n",
+    "# Change working directory to project root so config/field_definitions.yaml is found\n",
+    "os.chdir(project_root)\n",
+    "print(f\"\ud83d\udcc1 Working directory: {os.getcwd()}\")\n",
+    "\n",
     "import random\n",
     "import math\n",
     "\n",
@@ -86,29 +95,7 @@
     "from torchvision.transforms.functional import InterpolationMode\n",
     "\n",
     "# IPython display for rendering markdown\n",
-    "from IPython.display import display, Markdown\n",
-    "\n",
-    "# ============================================================================\n",
-    "# CONFIGURATION - All settings explicit in notebook\n",
-    "# ============================================================================\n",
-    "CONFIG = {\n",
-    "    # Model settings - InternVL3.5-8B (H200 optimized)\n",
-    "    'MODEL_PATH': '/home/jovyan/nfs_share/models/InternVL3_5-8B',\n",
-    "    \n",
-    "    # H200 TILE CONFIGURATION\n",
-    "    'MAX_TILES': 36,  # H200 optimized - InternVL3.5 training max for dense OCR\n",
-    "    \n",
-    "    # Generation settings\n",
-    "    'MAX_NEW_TOKENS': 2000,\n",
-    "    \n",
-    "    # H200 precision settings\n",
-    "    'TORCH_DTYPE': 'bfloat16',\n",
-    "    'USE_FLASH_ATTN': True,\n",
-    "}\n",
-    "\n",
-    "print(\"\u2705 Imports loaded\")\n",
-    "print(f\"\ud83d\udd32 Max Tiles: {CONFIG['MAX_TILES']} (H200 optimized)\")\n",
-    "print(f\"\ud83e\udd16 Model: {Path(CONFIG['MODEL_PATH']).name}\")"
+    "from IPython.display import display, Markdown"
    ]
   },
   {
